cmake_minimum_required(VERSION 2.8.3)
project(beginner_tutorials)

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  message_generation
  genmsg
  tf
)


################################################
## Declare ROS messages, services and actions ##
################################################

#add_message_files(DIRECTORY msg FILES Num.msg)
add_service_files(FILES change_string.srv)

## Generate added messages and services
generate_messages(DEPENDENCIES std_msgs)



catkin_package()



include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)



add_executable(talker src/talker.cpp)
target_link_libraries(talker ${catkin_LIBRARIES})
add_dependencies(talker beginner_tutorials_generate_messages_cpp)

add_executable(listener src/listener.cpp)
target_link_libraries(listener ${catkin_LIBRARIES})
add_dependencies(listener beginner_tutorials_generate_messages_cpp)





if(CATKIN_ENABLE_TESTING)
  find_package(rostest REQUIRED)

  add_rostest_gtest(
    talkerTest
    test/test.launch
    test/main.cpp
    test/test.cpp
  )

  target_link_libraries(
    talkerTest
    ${catkin_LIBRARIES}
  )

  add_dependencies(
    talkerTest
    talker
    listener
    ${catkin_EXPORTED_TARGETS}
  )
endif()

